[package]
name = "unispect"
version = "0.1.0"
edition = "2021"
author = "loovjo <https://github.com/loovjo>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
unic-char-property = "0.9.0"
unic-ucd = "0.9.0"
